--- a/form.html
+++ b/form.html
@@ -38,6 +38,7 @@
 		textarea {
 			vertical-align: top;
 			height: 5em;
+			resize: none;
 		}
 
 
@@ -57,12 +58,12 @@
 		
 		<div>
 			<label>E-Mail :</label>
-			<input type="text" placeholder="Enter Your E-Mail">
+			<input type="email" placeholder="Enter Your E-Mail" multiple>
 		</div>
 
 		<div>
 			<label>Message : </label>
-			<textarea>Message Here!</textarea>
+			<textarea placeholder="Message Here!"></textarea>
 		</div>
 
 		<div>
