--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
 	</style>
 </head>
 <body>
-	<form action="xyz" method="GET">
+	<form action="https://formspree.io/harshitjaiswal1809@gmail.com" method="POST">
 		<div>
 			<label>Name : </label>
 			<input type="text" placeholder="Enter Your Name " required minlength="3" maxlength="20">
